# libcw

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.am  README.md  cwAudioBuf.cpp  cwAudioBuf.h  cwAudioBufDecls.h  cwAudioDevice.cpp  cwAudioDevice.h  cwAudioDeviceAlsa.cpp  cwAudioDeviceAlsa.h  cwAudioDeviceDecls.h  cwAudioDeviceFile.cpp  cwAudioDeviceFile.h  cwAudioDeviceTest.cpp  cwAudioDeviceTest.h  cwAudioFile.cpp  cwAudioFile.h  cwAudioFileOps.cpp  cwAudioFileOps.h  cwAudioFileProc.cpp  cwAudioFileProc.h  cwAudioPort.cpp  cwAudioPort.h  cwAudioPortAlsa.cpp  cwAudioPortAlsa.h  cwAudioTransforms.cpp  cwAudioTransforms.h  cwAvahiSurface.cpp  cwB23Tree.cpp  cwB23Tree.h  cwCmInterface.cpp  cwCmInterface.h  cwCommon.h  cwCommonImpl.cpp  cwCommonImpl.h  cwCsv.cpp  (+217 more)
apps/cli/: CMakeLists.txt  README.md  main.cpp
apps/cli/cfg/: main.cfg
apps/cli/cfg/test/: flow_test.cfg  main.cfg
apps/cli/cfg/test/ref/audioBuf/test_0/: log.txt
apps/cli/cfg/test/ref/audio_transform/multi_ch_wt_seq_osc/: log.txt
apps/cli/cfg/test/ref/audio_transform/ola/: log.txt
apps/cli/cfg/test/ref/audio_transform/shift_buf/: log.txt
apps/cli/cfg/test/ref/audio_transform/wnd_func/: log.txt
apps/cli/cfg/test/ref/audio_transform/wt_osc/: log.txt
apps/cli/cfg/test/ref/audio_transform/wt_seq_osc/: log.txt
apps/cli/cfg/test/ref/dsp/convolve/: log.txt
apps/cli/cfg/test/ref/dsp/fft/: log.txt
apps/cli/cfg/test/ref/dsp/ifft/: log.txt
apps/cli/cfg/test/ref/dsp/intel_fft/: log.txt
apps/cli/cfg/test/ref/dsp/intel_ifft/: log.txt
apps/cli/cfg/test/ref/filesys/test_0/: log.txt
apps/cli/cfg/test/ref/flow/demo_03_presets/: log.txt
apps/cli/cfg/test/ref/flow/demo_04_program/: log.txt
apps/cli/cfg/test/ref/flow/demo_05_mult_inputs/: log.txt
apps/cli/cfg/test/ref/flow/demo_09_simple_poly/: log.txt
apps/cli/cfg/test/ref/flow/test_1/: log.txt
apps/cli/cfg/test/ref/flow/test_10/: log.txt
apps/cli/cfg/test/ref/flow/test_11/: log.txt
apps/cli/cfg/test/ref/flow/test_12/: log.txt
apps/cli/cfg/test/ref/flow/test_13/: log.txt
apps/cli/cfg/test/ref/flow/test_14/: log.txt
apps/cli/cfg/test/ref/flow/test_2/: log.txt
apps/cli/cfg/test/ref/flow/test_3/: log.txt
apps/cli/cfg/test/ref/flow/test_4/: log.txt
apps/cli/cfg/test/ref/flow/test_5/: log.txt
apps/cli/cfg/test/ref/flow/test_6/: log.txt
apps/cli/cfg/test/ref/flow/test_8/: log.txt
apps/cli/cfg/test/ref/flow_value/test_0/: log.txt
apps/cli/cfg/test/ref/lex/test_0/: log.txt
apps/cli/cfg/test/ref/mtx/test_0/: log.txt
apps/cli/cfg/test/ref/numeric_convert/test_0/: log.txt
apps/cli/cfg/test/ref/object/basic/: log.txt
apps/cli/cfg/test/ref/object/to_json/: log.txt
apps/cli/cfg/test/ref/thread_tasks/test_0/: log.txt
apps/cli/cfg/test/ref/time/test_0/: log.txt
apps/cli/cfg/test/ref/vop/test_0/: log.txt
apps/preset_sel/: CMakeLists.txt  cwIoFlow.h  cwIoPresetSelApp.cpp  cwIoPresetSelApp.h  main.cpp
apps/preset_sel/cfg/: preset_sel.cfg
apps/preset_sel/cfg/gutim_full/: .~lock.cm_score.csv#  20240504_gutim.cfg  20240504_scriabin.cfg  20240511_scriabin.cfg  20240520_scriabin.cfg  20240524_scriabin.cfg  gutim.cfg  gutim_perf.cfg  gutim_perf_new.cfg  gutim_perf_new_home.cfg  home_test.cfg  meas_loc.txt  print_meas_loc.py  sampler_recording.cfg  temp.csv  test_midi_io.cfg
apps/preset_sel/cfg/gutim_full/preset_select/: m1_458_trans_5.txt  m1_458_trans_5_scriabin_4.txt  m1_458_trans_6.txt
apps/preset_sel/cfg/gutim_full/vel_table/: vel_table_perf.json  vel_table_perf_scriabin.json
apps/preset_sel/html/: index.html  ui.cfg
apps/preset_sel/html/css/: preset_sel.css
apps/preset_sel/html/js/: ui.js
src/: CMakeLists.txt
src/core/: README.md  cwAudioFile.cpp  cwAudioFile.h  cwAudioFileOps.cpp  cwAudioFileOps.h  cwAudioFileProc.cpp  cwAudioFileProc.h  cwAudioFilePvProc.cpp  cwAudioTransforms.cpp  cwAudioTransforms.h  cwCommonImpl.h  cwCsv.cpp  cwCsv.h  cwDataSets.h  cwDsp.cpp  cwDsp.h  cwDspTransforms.cpp  cwFile.cpp  cwFile.h  cwFileSys.cpp  cwFileSys.h  cwLex.cpp  cwLib.h  cwLog.cpp  cwLog.h  cwMath.cpp  cwMath.h  cwMem.cpp  cwMem.h  cwMidi.cpp  cwMidi.h  cwMidiDecls.h  cwMidiFile.cpp  cwMidiFile.h  cwMidiState.h  cwMpScNbCircQueue.h  cwMpScNbQueue.h  cwMpScQueue.h  cwMtQueueTester.cpp  cwMtQueueTester.h  (+31 more)
src/cw/: cwDynRefTbl.h  cwGutimReg.h  cwMidiDetectors.cpp  cwMidiDetectors.h  cwPerfMeas.h  cwPianoScore.cpp  cwPianoScore.h  cwPresetSel.cpp  cwPresetSel.h  cwScoreFollow2.cpp  cwScoreFollow2.h  cwScoreFollow2Test.cpp  cwScoreFollow2Test.h  cwScoreFollower.cpp  cwScoreFollower.h  cwScoreParse.h  cwScoreTest.h  cwSfMatch.cpp  cwSfScore.h  cwSfTrack.h  cwSvgMidi.cpp  cwSvgMidi.h  cwSvgScoreFollow.h  cwWaveTableNotes.cpp  cwWaveTableNotes.h
src/flow/: cwFlow.cpp  cwFlow.h  cwFlowCross.cpp  cwFlowDecl.h  cwFlowNet.cpp  cwFlowNet.h  cwFlowPerf.cpp  cwFlowPerf.h  cwFlowProc.cpp  cwFlowProc.h  cwFlowTest.cpp  cwFlowTest.h  cwFlowTypes.cpp  cwFlowTypes.h  cwFlowValue.cpp  cwFlowValue.h
src/flow/rsrc/: proc_dict.cfg  udp_dict.cfg
src/io/: cwAudioBuf.h  cwAudioBufDecls.h  cwAudioDevice.cpp  cwAudioDevice.h  cwAudioDeviceAlsa.cpp  cwAudioDeviceAlsa.h  cwAudioDeviceDecls.h  cwAudioDeviceFile.cpp  cwAudioDeviceFile.h  cwAudioDeviceTest.cpp  cwIo.cpp  cwIo.h  cwKeyboard.h  cwMidiAlsa.cpp  cwMidiAlsa.h  cwMidiDeviceTest.cpp  cwSerialPort.cpp  cwSerialPortDecls.h  cwSerialPortSrv.h  cwSocket.cpp  cwSocketDecls.h  cwTcpSocket.h  cwTcpSocketSrv.h  cwUi.cpp  cwUi.h  cwWebSock.h
src/io_components/: cwIoAudioMidiApp.cpp  cwIoAudioPanel.h  cwIoAudioRecordPlay.h  cwIoMidiRecordPlay.cpp  cwIoMidiRecordPlay.h  cwIoMinTest.h
src/io_flow/: cwIoFlowCtl.cpp  cwIoFlowCtl.h
test/: CMakeLists.txt  main.cpp  test_audio_transforms.cpp  test_audiofile.cpp  test_csv.cpp  test_dsp.cpp  test_dsp_transforms.cpp  test_file.cpp  test_filesys.cpp  test_flow.cpp  test_lex.cpp  test_log.cpp  test_main.cpp  test_mem.cpp  test_midi.cpp  test_mutex.cpp  test_nbmpscqueue.cpp  test_numeric_convert.cpp  test_object.cpp  test_text.cpp  test_textbuf.cpp  test_thread.cpp  test_time.cpp  test_vops.cpp  test_wave_table_bank.cpp
(+100 files in other folders)
